<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZipFile</string>
    <string name="file_transfer">ZipFile</string>
    <string name="empty_select_file_send">No files selected!</string>
    <string name="step1_title_wifi">Enable Wi-Fi connection</string>
    <string name="step1_title_hotspot">Connect to Hotspot</string>
    <string name="step1_message_wifi">You need to connect to the same Wi-Fi network</string>
    <string name="step1_message_hotspot">You need to connect to the Hotspot!</string>
    <string name="no_connection_err">No connection, loading error!</string>
    <string name="connect_ip_address_err">Error to connect this IP Address!</string>
    <string name="file_upload_not_found">Cannot find this file to upload!</string>
    <string name="file_upload_not_exists">Upload error, file does not exist!</string>
    <string name="download_err_msg">Download error, check your connection!</string>
    <string name="upload_err_msg">Upload failed, please try again!</string>
    <string name="remove_transfer_item_title">Remove item</string>
    <string name="remove_transfer_msg">Are you sure to remove this file?</string>
    <string name="cancel_download">Cancel download</string>
    <string name="cancel_upload">Cancel upload</string>
    <string name="cancel_download_msg">Are you sure to cancel download this file?</string>
    <string name="cancel_upload_msg">Are your sure to cancel upload this file?</string>
    <string name="download_success_msg">Download successfully!</string>
    <string name="rm_send_file_title">Remove file</string>
    <string name="del_receive_file_title">Delete file</string>
    <string name="rm_send_file_msg">Are you sure to remove this file?</string>
    <string name="del_receive_file_msg">Are you sure to delete this file?</string>
    <string name="send_file_info">%d file(s) selected (%s)</string>
    <string name="cta_send_file">Send</string>
    <string name="feature_send_files">Send Files</string>
    <string name="feature_receive">Receive Files</string>
    <string name="send_via_wifi">Send via Wi-Fi</string>
    <string name="send_with_hotspot">Send via Hotspot</string>
    <string name="note_connect_same_network">Make sure you connect to the same Wi-Fi network to use \"Send via Wi-Fi\" feature.</string>
    <string name="note_input_address">Please enter the IP Address or scan QR Code to start using File Transfer</string>
    <string name="file_trasnfer">File Transfer</string>
    <string name="exit_feature">Note</string>
    <string name="hotspot_pms_msg">We need the Location Permission to enable the Hotspot. Please click Go Settings and grant permission!</string>
    <string name="write_setting_pms_msg">We need Write setting permission to use the "Send via Hotspot" feature. Please click Go Settings and grant permission!</string>
    <string name="connection">Connection</string>
    <string name="transfer_manager">Transfer Manager</string>
    <string name="step2_title">Follow the link address</string>
    <string name="step2_hotspot_msg">Scan QR Code or enter the following URL:</string>
    <string name="empty_send_file">No sent file!</string>
    <string name="empty_download_file">No downloaded file!</string>
    <string name="empty_receive_file">No received files!</string>
    <string name="empty_uploaded_file">No uploaded files!</string>
    <string name="cta_add_send_file">Nothing to send, please add now!</string>
    <string name="wait_upload_msg">Saving file!</string>
    <string name="sent_file_info">%d file(s) sent (%s)</string>
    <string name="received_file_info">%d file(s) received (%s)</string>
    <string name="upload_file_info">%d file(s) upload (%s)</string>
    <string name="premium_privileges">Premium Privileges</string>
    <string name="coming_soon_privilege">More privileges coming soon</string>
    <string name="exit_feature_msg">Are you sure to close this?</string>
    <string name="exit_wifi_feature_msg">Are you sure to close Wi-Fi Sharing?</string>
    <string name="exit_hotspot_feature_msg">Are you sure to close Hotspot Sharing?</string>
    <string name="exit_recieve_feaute">Are you sure to close Transfer Manager?</string>
    <string name="save_change_title">Save changes</string>
    <string name="cta_enable_wifi">Enable Wi-Fi</string>
    <string name="err_connect_layout_msg">Connect error. Please check the connection and try again.</string>
    <string name="err_adderss_layout_msg">Cannot connect to entered address. Please re-enter the correct address or press scan!</string>
    <string name="connect_error_layout_title">Connect Error</string>
    <string name="err_receive_layout_note">Note: You need to connect to the same Wi-Fi network to use File Transfer!</string>
    <string name="save_change_msg">Are you sure to cancel selected files and exit?</string>
    <string name="select_files">Select File</string>
    <string name="enable_location_service_msg">You must enable location for use this feature!</string>
    <string name="cta_connect">Connect</string>
    <string name="input_address_title">Input IP Address</string>
    <string name="empty_input_address_msg">Empty IP Address, please input again!</string>
    <string name="err_flash_support_msg">Your device not support flash!</string>
    <string name="err_start_hotspot">Error to start Hotspot Sharing!</string>
    <string name="scan_result_title">Scan Result</string>
    <string name="camera_pms_msg">We need the Carmera Permission to scan. Please click Go Settings and grant permission!</string>
    <string name="scan_err_msg">Scan error, please try again!</string>
    <string name="interrupt_server">Connection is interrupted, restart server</string>
    <string name="check_connection_title">Check Wi-Fi</string>
    <string name="enable_wifi_msg">Please enable Wi-Fi to use this feature!</string>
    <string name="web_notifi_title">Running File Transfer</string>
    <string name="web_notifi_msg">Connect to: %s:%d</string>
    <string name="web_notifi_action">Stop Share</string>
    <string name="request_timeout">Request timeout!</string>
    <string name="unable_download_file_msg">Unable to download this file, please press refresh button for getting newest content!</string>
    <string name="sever_limited_msg">Server limited please try again later!</string>
    <string name="upload_success_msg">Upload success!</string>
    <string name="upload">Upload</string>
    <string name="scan">Scan</string>
    <string name="point_the_camera_at_the_qrcode">Point the camera at the QRCode</string>
    <string name="or">or</string>
    <string name="input_server_adress">Input server address</string>
    <string name="ftp_share">Ftp share</string>
    <string name="send">Send</string>
    <string name="not_secure">not secure</string>
    <string name="password_protect">password protect</string>
    <string name="start">start</string>
    <string name="lost_internet_connection_please_check_your_connection_and_try_again">Lost internet connection. Please check your connection and try again</string>
    <string name="share_option">Share option</string>
    <string name="share_via_wifi">Share via Wifi</string>
    <string name="rename_title">Rename file?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="hint_address" translatable="false">Ex: https://192.168.1.30:8888</string>
    <string name="add_current_profile">Create new setting</string>
    <string name="more_compress">More</string>
    <string name="title_permission">Grant permission</string>
    <string name="cancel">Cancel</string>
    <string name="browse_common">Browse</string>
    <string name="go_setting">Go settings</string>
    <string name="processing" translatable="false">%s / %s (%d%%)</string>
    <string name="intenal_storage_title">Internal storage</string>
    <string name="sd_card_title">SD card</string>
    <string name="cta_exit_compress">No thanks</string>
    <string name="cta_continue_compress">Continue</string>
    <string name="sd_card_desc">SD memory card is not inserted!</string>
    <string name="select">Select</string>
    <string name="folder_item_count">%d item(s)</string>
    <string name="content_no_file">There is no files</string>
    <string name="library_feature_share">Share</string>
    <string name="library_share_error">Error to share</string>
    <string name="file_access_card_info">AFile Master needs to access files to work. Please provide access to SD card.</string>

    <string name="share_hotspot_qr">WIFI:S:%s;T:WPA;P:%s;IP:%s;</string>

</resources>
