<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sys_sec"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_feature_share"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/px8"
        android:background="@color/sys_quarternary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_feature_receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_feature_share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:text="@string/feature_send_files"
            android:textAllCaps="true"
            android:textColor="@color/label_prim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_feature_share_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_share_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feature_share_title">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_share_wifi_message"
                android:layout_width="@dimen/px200"
                android:layout_height="@dimen/px60"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/selector_button_primary_radius"
                android:text="@string/send_via_wifi"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px40"
            android:layout_marginEnd="@dimen/px40"
            android:gravity="center"
            android:text="@string/note_connect_same_network"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/ll_feature_share_hotspot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_feature_share_wifi" />

        <LinearLayout
            android:id="@+id/ll_feature_share_hotspot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_share_message">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_share_hotspot_message"
                android:layout_width="@dimen/px200"
                android:layout_height="@dimen/px60"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/selector_button_primary_radius"
                android:text="@string/send_with_hotspot"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_feature_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/px60"
        app:layout_constraintTop_toBottomOf="@+id/ll_feature_share"
        android:background="@color/sys_quarternary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:text="@string/feature_receive"
            android:textAllCaps="true"
            android:textColor="@color/label_prim" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px8"
            android:layout_marginEnd="@dimen/px16"
            android:text="@string/note_input_address"
            android:textColor="@color/label_sec" />

        <RelativeLayout
            android:id="@+id/rl_scan_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px48"
            android:layout_marginEnd="@dimen/px16"
            android:layout_marginBottom="@dimen/px16"
            android:background="@drawable/selector_button_background_radius">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_input_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginEnd="@dimen/px8"
                android:layout_toStartOf="@+id/iv_scan_qr"
                android:background="?attr/selectableItemBackground"
                android:text="@string/hint_address"
                android:textColor="@color/label_sec" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_scan_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_scan_qr" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>