<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fixed_black"
   >

    <FrameLayout
        android:id="@+id/fl_camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickBack"
            android:scaleType="centerInside"
            android:tint="@color/fixed_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/scan"
            android:textColor="@color/fixed_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_flash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickFlash"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flash_selector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/square_center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/px40"
        android:gravity="center"
        android:text="@string/point_the_camera_at_the_qrcode"
        android:textColor="@color/fixed_white"
        app:layout_constraintBottom_toTopOf="@+id/square_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_input_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/square_center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/px24"
            android:text="@string/or"
            android:textColor="@color/fixed_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_input_scan"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/px24"
            android:background="@drawable/bg_input_scan"
            android:gravity="center"
            android:onClick="onClickInputScan"
            android:paddingStart="@dimen/px20"
            android:paddingEnd="@dimen/px20"
            android:text="@string/input_server_adress"
            android:textAllCaps="true"
            android:textColor="@color/fixed_white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>