<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sys_quarternary"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sys_quarternary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickBack"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/ftp_share"
            android:textColor="@color/label_prim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_config_ftp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <RadioGroup
            android:id="@+id/rg_cofig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_portable_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/label_sec"
                android:text="@string/not_secure" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_protect_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px20"
                android:buttonTint="@color/label_sec"
                android:text="@string/password_protect" />

        </RadioGroup>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_link_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px20"
        android:adjustViewBounds="true"
        android:padding="@dimen/px20"
        android:src="@drawable/workspace_vector_ic_no_file" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ftp_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/px20"
        android:gravity="center"
        android:text="Hello World!"
        android:textColor="@color/label_prim" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/px40"
        android:layout_marginEnd="@dimen/px40"
        android:background="@drawable/selector_button_primary_radius"
        android:gravity="center"
        android:paddingTop="@dimen/px14"
        android:paddingBottom="@dimen/px14"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@color/fixed_white" />

</LinearLayout>